# midomtoolbox

./: .gitignore  .pre-commit-config.yaml  HISTORY.md  README.md  pyproject.toml  setup.cfg
examples/: convert_ctp.py  cpt_private_dict_example.xml  ctp_tags_example.script  render_protocol.py
midomtoolbox/: main.py
tests/: __init__.py  conftest.py
tests/test_resources/: PrivateTagDictionary.xml
tests/test_resources/CTP_scripts/: DicomAnonymizerRemoveAllPrivateTags.script  DicomAnonymizerRemoveSpecificPrivateTags.script  finalCompanyScriptFullDates.script  finalCompanyScriptKeepSafePrivateTags.script  finalCompanyScriptModifiedDates.script  finalCompanyScriptpatientNameIdGiven.script  finalCompanyScriptpatientNameIdPrefix.script
